Creative Tabs Tutorial

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -10,4 +10,5 @@
     "item.tutorialmod.example_chestplate": "Example Chestplate",
     "item.tutorialmod.example_leggings": "Example Leggings",
     "item.tutorialmod.example_boots": "Example Boots",
+    "tab.tutorialmod.example_tab": "Example Tab"
 }
