--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "block.tutorialmod.example_block": "Example Block",
+    "entity.tutorialmod.example_entity": "Example Entity",
     "item.tutorialmod.example_item": "Example Item",
     "item.tutorialmod.example_sword": "Example Sword",
     "item.tutorialmod.example_pickaxe": "Example Pickaxe",
@@ -11,5 +12,6 @@
     "item.tutorialmod.example_leggings": "Example Leggings",
     "item.tutorialmod.example_boots": "Example Boots",
     "item.tutorialmod.example_food": "Example Food",
+    "item.tutorialmod.example_spawn_egg": "Spawn Example Entity",
     "tab.tutorialmod.example_tab": "Example Tab"
 }
